--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
-            "module": "research",
+            "module": "service",
             "console": "internalConsole"
         }
     ]
