--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Evgenij Karpov <gedrip87@gmail.com>"]
 python = "^3.9"
 glom = "^20.11.0"
 httpx = "^0.19.0"
+arrow = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
 
