--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ httpx = "^0.19.0"
 arrow = "^1.2.0"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.2.5"
+mypy = "^0.910"
+flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
