--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 glom = "^20.11.0"
 httpx = "^0.19.0"
 arrow = "^1.2.0"
+orjson = "^3.6.4"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
