--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ glom = "^20.11.0"
 httpx = "^0.19.0"
 arrow = "^1.2.0"
 orjson = "^3.6.4"
+pydantic = "^1.8.2"
 
 [tool.poetry.dev-dependencies]
 mypy = "^0.910"
